<resources>
    <string name="app_name">Watchlist</string>
    <string name="user_email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="valid_email">Enter a valid email address</string>
    <string name="valid_password">Minimum 6 character required</string>
    <string name="valid_name">Minimum 3 character required</string>
    <string name="user_name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="please_wait">please wait</string>
    <string name="home_tab">Home</string>
    <string name="search_tab">Search</string>
    <string name="account_tab">Account</string>
    <string name="in_cinema">In cinema</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create">Create</string>
    <string name="settings">Settings</string>
    <string name="notification_settings">Notification settings</string>
</resources>
