<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/fragment_login_title"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:fontFamily="@font/amatic"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="28sp"
        android:textColor="@color/colorAccent"
        android:visibility="visible" />

    <View
        android:id="@+id/example_container"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/view_background"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_title" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_login_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/example_container">

        <EditText
            android:id="@+id/fragment_login_user_email_input"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_login_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_user_email"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <EditText
            android:id="@+id/fragment_login_user_password_input"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fragment_login_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="80dp"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_login_user_password"
        app:layout_constraintStart_toStartOf="@+id/fragment_login_user_password"
        app:layout_constraintTop_toBottomOf="@+id/fragment_login_user_password" />

    <TextView
        android:id="@+id/fragment_login_reg_btn_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_login_reg_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/example_container"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/fragment_login_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_btn_sign_up"
        android:paddingEnd="22dp"
        android:paddingStart="22dp"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_login_reg_btn_txt"
        app:layout_constraintTop_toBottomOf="@+id/example_container"
        app:layout_constraintVertical_bias="0.803" />

</android.support.constraint.ConstraintLayout>