<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/fragment_sign_up_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorBackground"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:id="@+id/main_app_bar_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:visibility="visible"
            android:padding="4dp"
            android:src="@drawable/arrow_left"
            android:tint="@color/colorAccent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:fontFamily="@font/amatic"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textSize="28sp"
                android:textColor="@color/colorAccent"
                android:visibility="visible"
                android:layout_marginEnd="32dp"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <View
        android:id="@+id/example_container"
        android:layout_width="0dp"
        android:layout_height="331dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/view_background"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_appbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_sign_up_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/example_container"
        app:layout_constraintStart_toStartOf="@+id/example_container"
        app:layout_constraintTop_toTopOf="@+id/example_container">

        <EditText
            android:id="@+id/fragment_sign_up_user_name_input"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/user_name"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_sign_up_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/example_container"
        app:layout_constraintStart_toStartOf="@+id/example_container"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_user_name">

        <EditText
            android:id="@+id/fragment_sign_up_user_email_input"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fragment_sign_up_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/example_container"
        app:layout_constraintStart_toStartOf="@+id/example_container"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_user_email"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <EditText
            android:id="@+id/fragment_sign_up_user_password_input"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fragment_sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="72dp"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:text="@string/sign_up"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="@+id/example_container"
        app:layout_constraintStart_toStartOf="@+id/example_container"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_user_password"
        android:textColor="@color/colorWhite"/>


</android.support.constraint.ConstraintLayout>

